--- a/code/prev_bootcamps.qmd
+++ b/code/prev_bootcamps.qmd
@@ -1,24 +1,40 @@
 ---
-title: '2021 and 2022 data bootcamps'
+title: 'EARNCon data bootcamp files'
 ---
 
 [EPI Bootcamp Website](https://economic.github.io/data_bootcamp/)
 
-## 2022 Data analysis in R ([Video](https://www.youtube.com/watch?v=PG7T0AoxIY0&list=PLOeWdRZsn2L__Noita2w4bQwd1tMJrfLU&index=7))
+# 2023 Data bootcamp
+
+## Data analysis in R: First steps
+
+First steps to data analysis in R slides ([pdf](https://economic.github.io/data_bootcamp/zipperer_firststepsR_slides.pdf))\
+EPI national wage percentiles data ([csv](https://economic.github.io/data_bootcamp/epi_wage_percentiles.csv))\
+2022 EPI CPS ORG extracts data ([zipped .dta](https://economic.github.io/data_bootcamp/epi_cpsorg_2022.dta.zip))
+
+## Using APIs to access data in R
+
+Accessing BLS and Census data ([code](bls_census_api_databootcamp.R))
+
+# 2022 EARNCon Data bootcamp
+
+## Data analysis in R ([Video](https://www.youtube.com/watch?v=PG7T0AoxIY0&list=PLOeWdRZsn2L__Noita2w4bQwd1tMJrfLU&index=7))
 
 [Data analysis in R slides](https://economic.github.io/data_bootcamp/zipperer_dataanalysisinR_slides.pdf)\
 [Historical minimum wage data](https://github.com/Economic/data_bootcamp/blob/master/mw_state_annual.xlsx)\
 [CPI-U-RS data\
 ](https://economic.github.io/data_bootcamp/r-cpi-u-rs-allitems.xlsx)[EPI CPS ORG data](https://github.com/Economic/data_bootcamp/blob/master/epi_cps_org_2022.dta.zip)
 
-## 2022 Data bootcamp: Code Library Presentation ([Video](https://www.youtube.com/watch?v=3owr9nGizYQ&list=PLOeWdRZsn2L__Noita2w4bQwd1tMJrfLU&index=6))
+## Code Library Presentation ([Video](https://www.youtube.com/watch?v=3owr9nGizYQ&list=PLOeWdRZsn2L__Noita2w4bQwd1tMJrfLU&index=6))
 
 [Code library powerpoint](https://github.com/Economic/data_bootcamp/blob/master/Code%20Library%20Presentation.pptx)
 
-## 2022 Data analysis in Stata ([Video](https://www.youtube.com/watch?v=L04fzN2uOVE&list=PLOeWdRZsn2L__Noita2w4bQwd1tMJrfLU&index=5))
+## Data analysis in Stata ([Video](https://www.youtube.com/watch?v=L04fzN2uOVE&list=PLOeWdRZsn2L__Noita2w4bQwd1tMJrfLU&index=5))
 
 [Data analysis in Stata slides](https://economic.github.io/data_bootcamp/Data%20analysis%20in%20.pptx)\
 [Stata session do file](https://economic.github.io/data_bootcamp/data_bootcamp_2022.do)
+
+# 2021 EARNCon Data Bootcamp
 
 ## 2021 First steps in Stata ([Video](https://www.youtube.com/watch?v=t1tKg9A6NaU&list=PLOeWdRZsn2L8geg2kkqcYZniR5TBk98si&index=7))
 
