--- a/code/epi_microdata.qmd
+++ b/code/epi_microdata.qmd
@@ -1,36 +1,84 @@
 ---
-title: "R: Using EPI's CPS Extracts"
+title: "Load EPI CPS Extracts via epiextractr"
 ---
 
-**Note:** Users will need to install epiextractr for this example. Refer to [EPI built libraries](epi-libraries.qmd) for installation instructions
+**Note:** Users will need to install `epiextractr` for this example. Refer to [EPI built libraries](epi-libraries.qmd) for installation instructions
 
-```{r Load libraries, message=FALSE}
-
+```{r Internal load libraries, include=FALSE, message=FALSE}
 library(tidyverse)
 library(epiextractr)
 library(here)
 ```
 
-```{r Download CPS files from microdata site, eval=FALSE, message=FALSE}
+```{r download cps, eval=FALSE, include=FALSE, message=FALSE}
 
 # download CPS ORG files  
-download_cps( sample = 'org', extracts_dir = here('data/org'))
+download_cps(sample = 'org', extracts_dir = here('data/cps'))
 
 # Users can also download CPS Basic (4085.3 MB) and CPS May (38.8 MB) files 
-download_cps(sample='basic', extracts_dir = here('data/basic'))
+download_cps(sample='basic', extracts_dir = here('data/cps'))
 
-download_cps(sample='may', extracts_dir = here('data/may'))
+download_cps(sample='may', extracts_dir = here('data/cps'))
 
 ```
 
-will download the latest EPI CPS ORG extracts in .feather format from [https://microdata.epi.org](https://microdata.epi.org/) and place them in the directory `C:\data\cps`.
+### Load required libraries
+
+```{r Load libraries, eval=FALSE, message=FALSE}
+library(tidyverse)
+library(epiextractr)
+```
+
+### Download CPS files
+
+```{r Download CPS files from microdata site, eval=FALSE, message=FALSE}
+
+# download CPS ORG files  
+download_cps( sample = 'org', extracts_dir = 'C:/YOUR_PATH/cps', overwrite = TRUE)
+
+# download CPS Basic (4085.3 MB) 
+download_cps(sample='basic', extracts_dir ='C:/YOUR_PATH/cps', overwrite = TRUE)
+
+# download CPS May (38.8 MB)
+download_cps(sample='may', extracts_dir = 'C:/YOUR_PATH/cps', overwrite = TRUE)
+
+```
+
+This will download the latest EPI CPS ORG extracts in .feather format from [https://microdata.epi.org](https://microdata.epi.org/) and place them in the directory `C:\data\cps`.
+
+### (Optional) Set and forget CPS data files by creating/editing an .Renviron file
+
+To simplify usage, you can omit the `.extracts_dir` argument by setting the environment variables to your extracts directory. This allows you to call CPS extracts from a single, dedicated folder, eliminating redundant downloads of CPS files.
+
+```{r Access your .Renviron file, eval=FALSE}
+# Find the .Renviron file
+renviron_path <- file.path(Sys.getenv("HOME"), ".Renviron")
+
+# Open the file for editing
+file.edit(renviron_path)
+
+# Paste the environment variable settings into your .Renviron file,
+# and make sure the paths are set to the location of your CPS files
+
+EPIEXTRACTS_CPSBASIC_DIR=C:/YOUR_PATH/cps
+EPIEXTRACTS_CPSMAY_DIR=C:/YOUR_PATH/cps
+EPIEXTRACTS_CPSORG_DIR=C:/YOUR_PATH/cps
+
+```
+
+After editing your `.Renviron` file, save your changes and restart R to apply them.
+
+### Load your CPS extracts!
 
 After the data is downloaded, load a selection of CPS data for your analysis:
 
-```{r Load ORG, message=FALSE}
+```{r Load ORG}
 
-org <- load_cps("org", 2020:2022, year, orgwgt, wage, age, statefips, wbho, 
-         .extracts_dir = here('data/org/'))
+org <- load_cps("org", 2010:2022, year, orgwgt, wage, age, statefips, wbho, 
+                .extracts_dir = here('data/cps'))
+
+# Alternatively, if you've set your paths in the .Renviron file, you can omit .extracts_dir()
+org <- load_cps("org", 2010:2022, year, orgwgt, wage, age, statefips, wbho)
 
 org
 
