--- a/code/epi_microdata.qmd
+++ b/code/epi_microdata.qmd
@@ -2,7 +2,7 @@
 title: "Load EPI CPS Extracts via epiextractr"
 ---
 
-**Note:** Users will need to install `epiextractr` for this example. Refer to [EPI built libraries](epi-libraries.qmd) for installation instructions
+**Note:** Users will need to install `epiextractr` for this example. Refer to [EPI packages for R](code/epi_libraries.qmd) for installation instructions
 
 ```{r Internal load libraries, include=FALSE, message=FALSE}
 library(tidyverse)
@@ -46,6 +46,17 @@ download_cps(sample='may', extracts_dir = 'C:/YOUR_PATH/cps', overwrite = TRUE)
 
 This will download the latest EPI CPS ORG extracts in .feather format from [https://microdata.epi.org](https://microdata.epi.org/) and place them in the directory `C:\data\cps`.
 
+### Load your CPS extracts!
+
+After the data is downloaded, load a selection of CPS data for your analysis:
+
+```{r Load ORG, eval=FALSE, message=FALSE}
+
+org <- load_cps("org", 2010:2022, year, orgwgt, wage, age, statefips, wbho, 
+                .extracts_dir = 'C:/YOUR_PATH/cps')
+
+```
+
 ### (Optional) Set and forget CPS data files by creating/editing an .Renviron file
 
 To simplify usage, you can omit the `.extracts_dir` argument by setting the environment variables to your extracts directory. This allows you to call CPS extracts from a single, dedicated folder, eliminating redundant downloads of CPS files.
@@ -68,18 +79,9 @@ EPIEXTRACTS_CPSORG_DIR=C:/YOUR_PATH/cps
 
 After editing your `.Renviron` file, save your changes and restart R to apply them.
 
-### Load your CPS extracts!
+If you've set your .Renviron file paths to point to the folder containing your CPS files, you can omit the `.extracts_dir()` command
 
-After the data is downloaded, load a selection of CPS data for your analysis:
+```{r eval=FALSE, message=FALSE}
 
-```{r Load ORG}
-
-org <- load_cps("org", 2010:2022, year, orgwgt, wage, age, statefips, wbho, 
-                .extracts_dir = here('data/cps'))
-
-# Alternatively, if you've set your paths in the .Renviron file, you can omit .extracts_dir()
 org <- load_cps("org", 2010:2022, year, orgwgt, wage, age, statefips, wbho)
-
-org
-
 ```
