--- a/epi_libraries.qmd
+++ b/epi_libraries.qmd
@@ -2,6 +2,8 @@
 title: "EPI packages for R"
 ---
 
+Installation instructions are available on each package’s Github page.
+
 [realtalk](https://economic.github.io/realtalk/)
 
 -   realtalk makes it easy to use common US price indexes in R.
@@ -12,24 +14,4 @@ title: "EPI packages for R"
 
 [epiextractr](https://economic.github.io/epiextractr)
 
--   epiextractr makes it easy to use the [EPI microdata extracts](https://microdata.epi.org/) in R.
-
-## How to install EPI's data tools
-
-**Note!** EPI's R packages require users to install [devtools](https://www.r-project.org/nosvn/pandoc/devtools.html)
-
-```{r, eval=FALSE, message=FALSE}
-
-install.packages('devtools')
-
-```
-
-Once you've installed devtools, you can install all three EPI packages using the following commands
-
-```{r EPI library installation, message=FALSE, eval=FALSE}
-
-devtools::install_github("Economic/realtalk")
-devtools::install_github("economic/epidatatools")
-devtools::install_github("economic/epiextractr")
-
-```
+-   use epiextractr to download CPS data from the [EPI microdata site](https://microdata.epi.org/).
