--- a/foreign_born_stats_ipumsr.qmd
+++ b/foreign_born_stats_ipumsr.qmd
@@ -5,7 +5,7 @@ format: html
 editor: visual
 ---
 
-```{r, Libraries, echo=FALSE}
+```{r, Libraries, message=FALSE}
 
 library(tidyverse)
 library(ipumsr)
@@ -55,7 +55,7 @@ Load the extract (the xml file) and clean it up before conducting analysis.
 
 **Note:** Your extract will likely have a different file name, double-check this and update the script accordingly before running the following chunk.
 
-```{r, Clean data, echo=FALSE}
+```{r, Clean data, message=FALSE}
 
 # NOTE: Your project directory and xml file may look different!
 acs_raw <- read_ipums_micro(ddi = 'input/usa_00010.xml')
