--- a/tidycensus_example.qmd
+++ b/tidycensus_example.qmd
@@ -17,7 +17,7 @@ library(tidyverse)
 #sets Census API key (optional but encouraged)
 census_api_key("YOUR CENSUS API KEY HERE", install = TRUE)
 
-# When adding a Census API key to your .Renviron file for the time, reload your environment so you can use the key without restarting R.
+# Reload your environment so you can use the key without restarting R.
 readRenviron("~/.Renviron")
 
 # You can check it with:
