--- a/union_premium.qmd
+++ b/union_premium.qmd
@@ -66,7 +66,8 @@ This code chunk separates out union versus nonunion wages, and then finds the pe
 
 ```{r, Calculate wage premium, message=FALSE}
 wage_dif_single <- wage_single |>
-  mutate(union_stat = case_when(union == "Not union represented" ~ "nonunion", union == "Union represented" ~ "union")) |>
+  mutate(union_stat = case_when(union == "Not union represented" ~ "nonunion", 
+                                union == "Union represented" ~ "union")) |>
   pivot_wider(id_cols = statefips, names_from = union_stat, values_from = wage_median) |>
   mutate(diff = ((union-nonunion)/nonunion))|>
 mutate(state = to_factor(statefips)) |>
@@ -123,7 +124,8 @@ This code chunk separates out union versus nonunion wages, and then finds the pe
 
 ```{r, Calculate time series wage premium, message=FALSE}
 wage_dif_series <- wage_series |>
-  mutate(union_stat = case_when(union == "Not union represented" ~ "nonunion", union == "Union represented" ~ "union")) |>
+  mutate(union_stat = case_when(union == "Not union represented" ~ "nonunion", 
+                                union == "Union represented" ~ "union")) |>
   pivot_wider(id_cols = year, names_from = union_stat, values_from = real_wage) |>
   mutate(diff = ((union-nonunion)/nonunion)) |>
   select(year, nonunion, union, diff)
