--- a/union_premium.qmd
+++ b/union_premium.qmd
@@ -7,9 +7,12 @@ editor: visual
 
 Use this code to calculate a union wage premium (the difference between median union and nonunion median wages) by state using the [EPI CPS microdata extracts](https://economic.github.io/earn_code_library/epi_microdata.html).
 
-Note: **sample sizes vary widely** over time, state, and union vs nonunion groups. Keep a close eye on this, and remember that some states may not have large enough sample sizes to produce strong data. Though there is no hard and fast rule for how large a sample needs to be, smaller samples will produce more noisy, less reliable data.
+Some utility notes:
 
-It may not be possible to find accurate union wage premium data for your state.
+1.  Unlike the regression-based national union wage premium on the [State of Working America Data Library](https://data.epi.org/unions/union_wage_gaps/line/year/national/percent_union_premium/overall?timeStart=2003-01-01&timeEnd=2024-01-01&dateString=2024-01-01&highlightedLines=overall), this simple code **does not control for confounding variables such as education, job type, or demographic.** That means while it may accurately reflect that union jobs often carry with them a wage premium, it does not take into account the fact that low-wage jobs, for instance, tend to be non-unionized. The actual wage premium across comparable positions may be different. Exercise caution when making specific claims with these data.
+2.  **Sample sizes vary widely** over time, state, and union vs nonunion groups. Keep a close eye on this, and remember that some states may not have large enough sample sizes to produce strong data. Though there is no hard and fast rule for how large a sample needs to be, smaller samples will produce more noisy, less reliable data. **It may not be possible to produce usable union wage premium data for your state.**
+
+Please reach out to [ecohn\@epi.org](mailto:ecohn@epi.org) with any questions. Now let's get coding!
 
 The following chunk of code loads the R libraries necessary for this exercise. You may need to install them to run this code.
 
