Rename Installing R tutorial page

--- a/Intro_to_R.qmd
+++ b/Intro_to_R.qmd
@@ -1,5 +1,5 @@
 ---
-title: "R Installation Webinar"
+title: "Installing R & RStudio EARN Talk"
 format: html
 author: "Emma Cohn & Daniel Perez"
 ---
