--- a/intro_to_r.qmd
+++ b/intro_to_r.qmd
@@ -1,16 +1,16 @@
 ---
-title: "R Installation Webinar"
+title: "Installing R & RStudio EARN Talk"
 format: html
-author: "Daniel Perez & Emma Cohn"
+author: "Emma Cohn & Daniel Perez"
 ---
 
-## Welcome to the R Installation Webinar landing page!
+## Welcome to the Preparing for Analysis with R landing page!
 
 This training and code workflow was originally delivered as an EARN Talk on July 29th, 2025.
 
 Missed this talk? See the recording here: [Preparing for Analysis with R: A guided tutorial for installing R and RStudio](https://us06web.zoom.us/rec/share/NfQbs0nb4BWsxZQw8NoKzJV3fhowtRXxKwc_UqjYFYgCRkgmywnCw4uw9lESnBL7.Xk7du8aT4P-K7YLB).
 
-**Passcode:**
+**Passcode:** Prep4R2025!
 
 [Presentation slides](https://github.com/Economic/earn_code_library/blob/main/supp_files/R_prep_webinar_slides.pdf)
 
