--- a/wisconsin_suppressed_wages.qmd
+++ b/wisconsin_suppressed_wages.qmd
@@ -1,5 +1,5 @@
 ---
-title: "State-level median wages by demographic (race, gender, educational attainment)"
+title: "State-level median wages by demographic"
 author: "Emma Cohn and Sebastian Martinez Hickey"
 format: html
 editor: visual
@@ -25,7 +25,7 @@ library(openxlsx2)
 wb <- wb_workbook()
 ```
 
-# Set up for inflation adjusting
+## Set up for inflation adjusting
 
 EPI uses the CPI-U-RS series to inflation adjust wages, so we'll select that series and assign it to a dataframe. 
 
